--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "commander": "^2.9.0",
-    "csv-stream": "^0.1.3"
+    "csv-stream": "^0.1.3",
+    "node-schedule": "^1.2.1"
   },
   "bin": {
     "trackersim": "trackersim.js"
